split player mode from currentGamemode and update backend defaults to practice Cabin Standard