@@ -4,15 +4,16 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.security.SecureRandom;
 import java.sql.Connection;
 import java.sql.ResultSet;
-import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.Instant;
 import java.util.LinkedHashMap;
+import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @RestController
 @RequestMapping("/players")
@@ -20,13 +21,12 @@ public class PlayerController {
 
     private static final String HEADER_PLAYER_ID = "X-Player-Id";
     private static final String HEADER_PLAYER_TOKEN = "X-Player-Token";
-
-    private static final boolean DEBUG_ERRORS = readDebugErrorsFlag();
-    private static final AtomicLong ERROR_COUNTER = new AtomicLong(1000);
+    private static final AtomicInteger ERROR_COUNTER = new AtomicInteger(1000);
+    private static final SecureRandom RANDOM = new SecureRandom();
 
     @PostMapping("/register")
     public ResponseEntity<ApiResponse<ApiModels.RegisterPlayerData>> registerPlayer(
-        @RequestBody ApiModels.RegisterPlayerRequest request
+        @RequestBody(required = false) ApiModels.RegisterPlayerRequest request
     ) {
         String username = request == null ? null : request.username;
         String validationError = validateUsername(username);
@@ -34,34 +34,69 @@ public class PlayerController {
             return badRequest(validationError);
         }
 
-        String now = Instant.now().toString();
         String playerId = UUID.randomUUID().toString();
-        String authToken = UUID.randomUUID() + "-" + UUID.randomUUID();
+        String authToken = generateAuthToken();
+        String now = Instant.now().toString();
 
-        try (Connection conn = Database.getConnection()) {
-            debug("register: opened connection for username=" + username);
+        try (Connection conn = Database.getConnection();
+             Statement stmt = conn.createStatement()) {
+
             Database.ensureSchema(conn);
-            debug("register: schema ensured for username=" + username);
 
-            if (usernameExists(conn, username)) {
-                debug("register: username already exists: " + username);
-                return conflict("Username already exists");
-            }
+            stmt.execute("""
+                INSERT INTO players (
+                    id,
+                    username,
+                    music_enabled,
+                    sfx_enabled,
+                    vibration_enabled,
+                    theme,
+                    mode,
+                    wins,
+                    losses,
+                    current_gamemode,
+                    current_board_width,
+                    current_board_height,
+                    created_at,
+                    updated_at
+                )
+                VALUES (
+                    '%s',
+                    '%s',
+                    %d,
+                    %d,
+                    %d,
+                    '%s',
+                    '%s',
+                    0,
+                    0,
+                    '%s',
+                    %d,
+                    %d,
+                    '%s',
+                    '%s'
+                )
+            """.formatted(
+                escapeSql(playerId),
+                escapeSql(username),
+                boolToInt(GameDefaults.DEFAULT_MUSIC_ENABLED),
+                boolToInt(GameDefaults.DEFAULT_SFX_ENABLED),
+                boolToInt(GameDefaults.DEFAULT_VIBRATION_ENABLED),
+                escapeSql(GameDefaults.DEFAULT_THEME),
+                escapeSql(GameDefaults.DEFAULT_MODE),
+                escapeSql(GameDefaults.DEFAULT_GAMEMODE),
+                GameDefaults.DEFAULT_BOARD_WIDTH,
+                GameDefaults.DEFAULT_BOARD_HEIGHT,
+                escapeSql(now),
+                escapeSql(now)
+            ));
 
-            try (Statement stmt = conn.createStatement()) {
+            for (String mmrMode : GameDefaults.ALLOWED_MMR_MODES) {
                 stmt.execute("""
-                    INSERT INTO players (
-                        id,
-                        username,
-                        music_enabled,
-                        sfx_enabled,
-                        vibration_enabled,
-                        theme,
-                        wins,
-                        losses,
-                        current_gamemode,
-                        current_board_width,
-                        current_board_height,
+                    INSERT INTO player_mmr (
+                        player_id,
+                        mode,
+                        mmr,
                         created_at,
                         updated_at
                     )
@@ -69,78 +104,27 @@ public class PlayerController {
                         '%s',
                         '%s',
                         %d,
-                        %d,
-                        %d,
-                        '%s',
-                        0,
-                        0,
-                        '%s',
-                        %d,
-                        %d,
                         '%s',
                         '%s'
                     )
                 """.formatted(
                     escapeSql(playerId),
-                    escapeSql(username),
-                    boolToInt(GameDefaults.DEFAULT_MUSIC_ENABLED),
-                    boolToInt(GameDefaults.DEFAULT_SFX_ENABLED),
-                    boolToInt(GameDefaults.DEFAULT_VIBRATION_ENABLED),
-                    escapeSql(GameDefaults.DEFAULT_THEME),
-                    escapeSql(GameDefaults.DEFAULT_GAMEMODE),
-                    GameDefaults.DEFAULT_BOARD_WIDTH,
-                    GameDefaults.DEFAULT_BOARD_HEIGHT,
+                    escapeSql(mmrMode),
+                    GameDefaults.DEFAULT_MMR,
                     escapeSql(now),
                     escapeSql(now)
                 ));
-                debug("register: inserted player, playerId=" + playerId);
             }
 
-            upsertSession(conn, playerId, authToken, now, now);
-            debug("register: session upserted for playerId=" + playerId);
-
-            try (Statement stmt = conn.createStatement()) {
-                for (String mode : GameDefaults.ALLOWED_MMR_MODES) {
-                    stmt.execute("""
-                        INSERT INTO player_mmr (
-                            player_id,
-                            mode,
-                            mmr,
-                            created_at,
-                            updated_at
-                        )
-                        VALUES (
-                            '%s',
-                            '%s',
-                            %d,
-                            '%s',
-                            '%s'
-                        )
-                    """.formatted(
-                        escapeSql(playerId),
-                        escapeSql(mode),
-                        GameDefaults.DEFAULT_MMR,
-                        escapeSql(now),
-                        escapeSql(now)
-                    ));
-                    debug("register: inserted MMR row mode=" + mode + ", playerId=" + playerId);
-                }
-            } catch (Exception mmrInsertError) {
-                cleanupPartialPlayer(conn, playerId);
-                throw mmrInsertError;
-            }
+            upsertSession(stmt, playerId, authToken, now);
 
             ApiModels.RegisterPlayerData data = new ApiModels.RegisterPlayerData();
             data.id = playerId;
             data.username = username;
             data.authToken = authToken;
+
             return ok(data);
 
-        } catch (SQLException e) {
-            if (isUniqueConstraintViolation(e)) {
-                return conflict("Username already exists");
-            }
-            return serverError("Error registering player", e);
         } catch (Exception e) {
             return serverError("Error registering player", e);
         }
@@ -148,36 +132,34 @@ public class PlayerController {
 
     @PostMapping("/bootstrap-session")
     public ResponseEntity<ApiResponse<ApiModels.PlayerData>> bootstrapSession(
-        @RequestBody ApiModels.BootstrapSessionRequest request
+        @RequestBody(required = false) ApiModels.BootstrapSessionRequest request
     ) {
-        if (request == null) {
-            return badRequest("Request body is required");
-        }
-
-        String requestedId = firstNonBlank(trimToNull(request.id), trimToNull(request.playerId));
-        String validationError = validatePlayerId(requestedId);
+        String playerId = request == null ? null : firstNonBlank(request.id, request.playerId);
+        String validationError = validatePlayerId(playerId);
         if (validationError != null) {
             return badRequest(validationError);
         }
 
-        String newToken = UUID.randomUUID() + "-" + UUID.randomUUID();
         String now = Instant.now().toString();
 
-        try (Connection conn = Database.getConnection()) {
+        try (Connection conn = Database.getConnection();
+             Statement stmt = conn.createStatement()) {
+
             Database.ensureSchema(conn);
 
-            ApiModels.PlayerData data = fetchPlayerDataById(conn, requestedId);
-            if (data == null) {
+            ApiModels.PlayerData player = fetchPlayerDataById(conn, playerId);
+            if (player == null) {
                 return notFound("Player not found");
             }
 
-            if (hasAnySession(conn, requestedId)) {
-                return unauthorized("Session token required for this player");
+            String authToken = fetchSessionToken(conn, playerId);
+            if (isBlank(authToken)) {
+                authToken = generateAuthToken();
+                upsertSession(stmt, playerId, authToken, now);
             }
 
-            upsertSession(conn, requestedId, newToken, now, now);
-            data.authToken = newToken;
-            return ok(data);
+            player.authToken = authToken;
+            return ok(player);
 
         } catch (Exception e) {
             return serverError("Error bootstrapping session", e);
@@ -198,8 +180,12 @@ public class PlayerController {
         try (Connection conn = Database.getConnection()) {
             Database.ensureSchema(conn);
 
-            if (!isAuthenticated(conn, id, authPlayerId, authToken)) {
+            if (!hasValidSession(conn, authPlayerId, authToken)) {
                 return unauthorized("Invalid player credentials");
+            }
+
+            if (!id.equals(authPlayerId)) {
+                return unauthorized("Player id does not match authenticated session");
             }
 
             ApiModels.PlayerData player = fetchPlayerDataById(conn, id);
@@ -207,7 +193,6 @@ public class PlayerController {
                 return notFound("Player not found");
             }
 
-            player.authToken = null;
             return ok(player);
 
         } catch (Exception e) {
@@ -239,10 +224,9 @@ public class PlayerController {
             }
 
             if (!player.id.equals(authPlayerId)) {
-                return forbidden("Full player data can only be fetched for the authenticated player");
+                return unauthorized("You may only fetch your own player data");
             }
 
-            player.authToken = null;
             return ok(player);
 
         } catch (Exception e) {
@@ -252,7 +236,7 @@ public class PlayerController {
 
     @PostMapping("/update-settings")
     public ResponseEntity<ApiResponse<ApiModels.UpdatePlayerSettingsData>> updatePlayerSettings(
-        @RequestBody ApiModels.UpdatePlayerSettingsRequest request,
+        @RequestBody(required = false) ApiModels.UpdatePlayerSettingsRequest request,
         @RequestHeader(value = HEADER_PLAYER_ID, required = false) String authPlayerId,
         @RequestHeader(value = HEADER_PLAYER_TOKEN, required = false) String authToken
     ) {
@@ -265,14 +249,23 @@ public class PlayerController {
             return badRequest(idError);
         }
 
+        if (!request.id.equals(authPlayerId)) {
+            return unauthorized("Player id does not match authenticated session");
+        }
+
         String themeError = validateTheme(request.theme);
         if (themeError != null) {
             return badRequest(themeError);
         }
 
-        String modeError = validateGamemode(request.currentGamemode);
+        String modeError = validateMode(request.mode);
         if (modeError != null) {
             return badRequest(modeError);
+        }
+
+        String gamemodeError = validateGamemode(request.currentGamemode);
+        if (gamemodeError != null) {
+            return badRequest(gamemodeError);
         }
 
         String boardError = validateBoardSize(request.currentBoardWidth, request.currentBoardHeight);
@@ -282,41 +275,47 @@ public class PlayerController {
 
         String now = Instant.now().toString();
 
-        try (Connection conn = Database.getConnection()) {
+        try (Connection conn = Database.getConnection();
+             Statement stmt = conn.createStatement()) {
+
             Database.ensureSchema(conn);
 
-            if (!isAuthenticated(conn, request.id, authPlayerId, authToken)) {
+            if (!hasValidSession(conn, authPlayerId, authToken)) {
                 return unauthorized("Invalid player credentials");
             }
 
-            try (Statement stmt = conn.createStatement()) {
-                int updated = stmt.executeUpdate("""
-                    UPDATE players
-                    SET
-                        music_enabled = %d,
-                        sfx_enabled = %d,
-                        vibration_enabled = %d,
-                        theme = '%s',
-                        current_gamemode = '%s',
-                        current_board_width = %d,
-                        current_board_height = %d,
-                        updated_at = '%s'
-                    WHERE id = '%s'
-                """.formatted(
-                    boolToInt(request.musicEnabled),
-                    boolToInt(request.sfxEnabled),
-                    boolToInt(request.vibrationEnabled),
-                    escapeSql(request.theme),
-                    escapeSql(request.currentGamemode),
-                    request.currentBoardWidth,
-                    request.currentBoardHeight,
-                    escapeSql(now),
-                    escapeSql(request.id)
-                ));
-                if (updated == 0) {
-                    return notFound("Player not found");
-                }
+            ApiModels.PlayerData existing = fetchPlayerDataById(conn, request.id);
+            if (existing == null) {
+                return notFound("Player not found");
             }
+
+            String normalizedMode = request.mode.trim().toLowerCase(Locale.ROOT);
+
+            stmt.executeUpdate("""
+                UPDATE players
+                SET
+                    music_enabled = %d,
+                    sfx_enabled = %d,
+                    vibration_enabled = %d,
+                    theme = '%s',
+                    mode = '%s',
+                    current_gamemode = '%s',
+                    current_board_width = %d,
+                    current_board_height = %d,
+                    updated_at = '%s'
+                WHERE id = '%s'
+            """.formatted(
+                boolToInt(request.musicEnabled),
+                boolToInt(request.sfxEnabled),
+                boolToInt(request.vibrationEnabled),
+                escapeSql(request.theme),
+                escapeSql(normalizedMode),
+                escapeSql(request.currentGamemode),
+                request.currentBoardWidth,
+                request.currentBoardHeight,
+                escapeSql(now),
+                escapeSql(request.id)
+            ));
 
             ApiModels.UpdatePlayerSettingsData data = new ApiModels.UpdatePlayerSettingsData();
             data.id = request.id;
@@ -324,10 +323,12 @@ public class PlayerController {
             data.sfxEnabled = request.sfxEnabled;
             data.vibrationEnabled = request.vibrationEnabled;
             data.theme = request.theme;
+            data.mode = normalizedMode;
             data.currentGamemode = request.currentGamemode;
             data.currentBoardWidth = request.currentBoardWidth;
             data.currentBoardHeight = request.currentBoardHeight;
             data.updatedAt = now;
+
             return ok(data);
 
         } catch (Exception e) {
@@ -337,7 +338,7 @@ public class PlayerController {
 
     @PostMapping("/update-stats")
     public ResponseEntity<ApiResponse<ApiModels.UpdatePlayerStatsData>> updatePlayerStats(
-        @RequestBody ApiModels.UpdatePlayerStatsRequest request,
+        @RequestBody(required = false) ApiModels.UpdatePlayerStatsRequest request,
         @RequestHeader(value = HEADER_PLAYER_ID, required = false) String authPlayerId,
         @RequestHeader(value = HEADER_PLAYER_TOKEN, required = false) String authToken
     ) {
@@ -350,48 +351,50 @@ public class PlayerController {
             return badRequest(idError);
         }
 
+        if (!request.id.equals(authPlayerId)) {
+            return unauthorized("Player id does not match authenticated session");
+        }
+
         if (request.winsToAdd < 0 || request.lossesToAdd < 0) {
             return badRequest("winsToAdd and lossesToAdd must be 0 or greater");
         }
 
         String now = Instant.now().toString();
 
-        try (Connection conn = Database.getConnection()) {
+        try (Connection conn = Database.getConnection();
+             Statement stmt = conn.createStatement()) {
+
             Database.ensureSchema(conn);
 
-            if (!isAuthenticated(conn, request.id, authPlayerId, authToken)) {
+            if (!hasValidSession(conn, authPlayerId, authToken)) {
                 return unauthorized("Invalid player credentials");
             }
 
-            try (Statement stmt = conn.createStatement()) {
-                int updated = stmt.executeUpdate("""
-                    UPDATE players
-                    SET
-                        wins = wins + %d,
-                        losses = losses + %d,
-                        updated_at = '%s'
-                    WHERE id = '%s'
-                """.formatted(
-                    request.winsToAdd,
-                    request.lossesToAdd,
-                    escapeSql(now),
-                    escapeSql(request.id)
-                ));
-                if (updated == 0) {
-                    return notFound("Player not found");
-                }
-            }
+            int rows = stmt.executeUpdate("""
+                UPDATE players
+                SET
+                    wins = wins + %d,
+                    losses = losses + %d,
+                    updated_at = '%s'
+                WHERE id = '%s'
+            """.formatted(
+                request.winsToAdd,
+                request.lossesToAdd,
+                escapeSql(now),
+                escapeSql(request.id)
+            ));
 
-            ApiModels.PlayerData player = fetchPlayerDataById(conn, request.id);
-            if (player == null) {
+            if (rows == 0) {
                 return notFound("Player not found");
             }
 
+            ApiModels.PlayerData player = fetchPlayerDataById(conn, request.id);
             ApiModels.UpdatePlayerStatsData data = new ApiModels.UpdatePlayerStatsData();
-            data.id = player.id;
-            data.wins = player.wins;
-            data.losses = player.losses;
-            data.updatedAt = player.updatedAt;
+            data.id = request.id;
+            data.wins = player == null ? 0 : player.wins;
+            data.losses = player == null ? 0 : player.losses;
+            data.updatedAt = now;
+
             return ok(data);
 
         } catch (Exception e) {
@@ -401,7 +404,7 @@ public class PlayerController {
 
     @PostMapping("/update-mmr")
     public ResponseEntity<ApiResponse<ApiModels.UpdatePlayerMmrData>> updatePlayerMmr(
-        @RequestBody ApiModels.UpdatePlayerMmrRequest request,
+        @RequestBody(required = false) ApiModels.UpdatePlayerMmrRequest request,
         @RequestHeader(value = HEADER_PLAYER_ID, required = false) String authPlayerId,
         @RequestHeader(value = HEADER_PLAYER_TOKEN, required = false) String authToken
     ) {
@@ -412,6 +415,10 @@ public class PlayerController {
         String idError = validatePlayerId(request.id);
         if (idError != null) {
             return badRequest(idError);
+        }
+
+        if (!request.id.equals(authPlayerId)) {
+            return unauthorized("Player id does not match authenticated session");
         }
 
         String modeError = validateMmrMode(request.mode);
@@ -425,58 +432,62 @@ public class PlayerController {
 
         String now = Instant.now().toString();
 
-        try (Connection conn = Database.getConnection()) {
+        try (Connection conn = Database.getConnection();
+             Statement stmt = conn.createStatement();
+             Statement readStmt = conn.createStatement()) {
+
             Database.ensureSchema(conn);
 
-            if (!isAuthenticated(conn, request.id, authPlayerId, authToken)) {
+            if (!hasValidSession(conn, authPlayerId, authToken)) {
                 return unauthorized("Invalid player credentials");
             }
 
-            String safeId = escapeSql(request.id);
-            String safeMode = escapeSql(request.mode);
-            String safeNow = escapeSql(now);
+            ApiModels.PlayerData existingPlayer = fetchPlayerDataById(conn, request.id);
+            if (existingPlayer == null) {
+                return notFound("Player not found");
+            }
+
             String createdAt = now;
 
-            try (Statement stmt = conn.createStatement()) {
-                try (ResultSet rs = stmt.executeQuery("""
-                    SELECT created_at
-                    FROM player_mmr
-                    WHERE player_id = '%s' AND mode = '%s'
-                """.formatted(safeId, safeMode))) {
-                    if (rs.next()) {
-                        createdAt = rs.getString("created_at");
-                    }
+            try (ResultSet rs = readStmt.executeQuery("""
+                SELECT created_at
+                FROM player_mmr
+                WHERE player_id = '%s' AND mode = '%s'
+            """.formatted(escapeSql(request.id), escapeSql(request.mode)))) {
+                if (rs.next()) {
+                    createdAt = rs.getString("created_at");
                 }
-
-                stmt.execute("""
-                    INSERT OR REPLACE INTO player_mmr (
-                        player_id,
-                        mode,
-                        mmr,
-                        created_at,
-                        updated_at
-                    )
-                    VALUES (
-                        '%s',
-                        '%s',
-                        %d,
-                        '%s',
-                        '%s'
-                    )
-                """.formatted(
-                    safeId,
-                    safeMode,
-                    request.mmr,
-                    escapeSql(createdAt),
-                    safeNow
-                ));
             }
+
+            stmt.execute("""
+                INSERT OR REPLACE INTO player_mmr (
+                    player_id,
+                    mode,
+                    mmr,
+                    created_at,
+                    updated_at
+                )
+                VALUES (
+                    '%s',
+                    '%s',
+                    %d,
+                    '%s',
+                    '%s'
+                )
+            """.formatted(
+                escapeSql(request.id),
+                escapeSql(request.mode),
+                request.mmr,
+                escapeSql(createdAt),
+                escapeSql(now)
+            ));
 
             ApiModels.UpdatePlayerMmrData data = new ApiModels.UpdatePlayerMmrData();
             data.id = request.id;
             data.mode = request.mode;
             data.mmr = request.mmr;
             data.updatedAt = now;
+
             return ok(data);
 
         } catch (Exception e) {
@@ -493,12 +504,10 @@ public class PlayerController {
     }
 
     private ApiModels.PlayerData fetchPlayerData(Connection conn, String field, String value) throws Exception {
-        String safeValue = escapeSql(value);
-
         try (Statement playerStmt = conn.createStatement();
              Statement mmrStmt = conn.createStatement()) {
 
-            try (ResultSet playerRs = playerStmt.executeQuery("""
+            ResultSet playerRs = playerStmt.executeQuery("""
                 SELECT
                     id,
                     username,
@@ -506,6 +515,7 @@ public class PlayerController {
                     sfx_enabled,
                     vibration_enabled,
                     theme,
+                    mode,
                     wins,
                     losses,
                     current_gamemode,
@@ -515,61 +525,52 @@ public class PlayerController {
                     updated_at
                 FROM players
                 WHERE %s = '%s'
-            """.formatted(field, safeValue))) {
-                if (!playerRs.next()) {
-                    return null;
-                }
+            """.formatted(field, escapeSql(value)));
 
-                String playerId = playerRs.getString("id");
-                Map<String, Integer> mmrMap = new LinkedHashMap<>();
-                mmrMap.put("4x4", GameDefaults.DEFAULT_MMR);
-                mmrMap.put("4x5", GameDefaults.DEFAULT_MMR);
-                mmrMap.put("5x5", GameDefaults.DEFAULT_MMR);
-
-                try (ResultSet mmrRs = mmrStmt.executeQuery("""
-                    SELECT mode, mmr
-                    FROM player_mmr
-                    WHERE player_id = '%s'
-                """.formatted(escapeSql(playerId)))) {
-                    while (mmrRs.next()) {
-                        mmrMap.put(mmrRs.getString("mode"), mmrRs.getInt("mmr"));
-                    }
-                }
-
-                ApiModels.PlayerData data = new ApiModels.PlayerData();
-                data.id = playerId;
-                data.username = playerRs.getString("username");
-                data.musicEnabled = playerRs.getInt("music_enabled") == 1;
-                data.sfxEnabled = playerRs.getInt("sfx_enabled") == 1;
-                data.vibrationEnabled = playerRs.getInt("vibration_enabled") == 1;
-                data.theme = playerRs.getString("theme");
-                data.wins = playerRs.getInt("wins");
-                data.losses = playerRs.getInt("losses");
-                data.currentGamemode = playerRs.getString("current_gamemode");
-                data.currentBoardWidth = playerRs.getInt("current_board_width");
-                data.currentBoardHeight = playerRs.getInt("current_board_height");
-                data.createdAt = playerRs.getString("created_at");
-                data.updatedAt = playerRs.getString("updated_at");
-                data.mmr = mmrMap;
-                data.authToken = null;
-                return data;
+            if (!playerRs.next()) {
+                return null;
             }
-        }
-    }
 
-    private boolean hasAnySession(Connection conn, String playerId) throws Exception {
-        try (Statement stmt = conn.createStatement();
-             ResultSet rs = stmt.executeQuery("""
-                 SELECT 1
-                 FROM player_sessions
-                 WHERE player_id = '%s'
-             """.formatted(escapeSql(playerId)))) {
-            return rs.next();
+            String playerId = playerRs.getString("id");
+
+            Map<String, Integer> mmrMap = new LinkedHashMap<String, Integer>();
+            mmrMap.put("4x4", GameDefaults.DEFAULT_MMR);
+            mmrMap.put("4x5", GameDefaults.DEFAULT_MMR);
+            mmrMap.put("5x5", GameDefaults.DEFAULT_MMR);
+
+            ResultSet mmrRs = mmrStmt.executeQuery("""
+                SELECT mode, mmr
+                FROM player_mmr
+                WHERE player_id = '%s'
+            """.formatted(escapeSql(playerId)));
+
+            while (mmrRs.next()) {
+                mmrMap.put(mmrRs.getString("mode"), mmrRs.getInt("mmr"));
+            }
+
+            ApiModels.PlayerData data = new ApiModels.PlayerData();
+            data.id = playerId;
+            data.username = playerRs.getString("username");
+            data.musicEnabled = playerRs.getInt("music_enabled") == 1;
+            data.sfxEnabled = playerRs.getInt("sfx_enabled") == 1;
+            data.vibrationEnabled = playerRs.getInt("vibration_enabled") == 1;
+            data.theme = playerRs.getString("theme");
+            data.mode = playerRs.getString("mode");
+            data.wins = playerRs.getInt("wins");
+            data.losses = playerRs.getInt("losses");
+            data.currentGamemode = playerRs.getString("current_gamemode");
+            data.currentBoardWidth = playerRs.getInt("current_board_width");
+            data.currentBoardHeight = playerRs.getInt("current_board_height");
+            data.createdAt = playerRs.getString("created_at");
+            data.updatedAt = playerRs.getString("updated_at");
+            data.mmr = mmrMap;
+
+            return data;
         }
     }
 
     private boolean hasValidSession(Connection conn, String authPlayerId, String authToken) throws Exception {
-        if (authPlayerId == null || authPlayerId.isBlank() || authToken == null || authToken.isBlank()) {
+        if (isBlank(authPlayerId) || isBlank(authToken)) {
             return false;
         }
 
@@ -583,95 +584,59 @@ public class PlayerController {
         }
     }
 
-    private boolean isAuthenticated(Connection conn, String requestPlayerId, String authPlayerId, String authToken) throws Exception {
-        if (requestPlayerId == null || !requestPlayerId.equals(authPlayerId)) {
-            return false;
-        }
-
-        return hasValidSession(conn, authPlayerId, authToken);
-    }
-
-    private boolean usernameExists(Connection conn, String username) throws Exception {
+    private String fetchSessionToken(Connection conn, String playerId) throws Exception {
         try (Statement stmt = conn.createStatement();
              ResultSet rs = stmt.executeQuery("""
-                 SELECT 1
-                 FROM players
-                 WHERE username = '%s'
-             """.formatted(escapeSql(username)))) {
-            return rs.next();
+                 SELECT auth_token
+                 FROM player_sessions
+                 WHERE player_id = '%s'
+             """.formatted(escapeSql(playerId)))) {
+            if (rs.next()) {
+                return rs.getString("auth_token");
+            }
+            return null;
         }
     }
 
-    private void upsertSession(Connection conn, String playerId, String authToken, String createdAt, String updatedAt) throws Exception {
-        String existingCreatedAt = createdAt;
-
-        try (Statement stmt = conn.createStatement()) {
-            try (ResultSet rs = stmt.executeQuery("""
-                SELECT created_at
-                FROM player_sessions
-                WHERE player_id = '%s'
-            """.formatted(escapeSql(playerId)))) {
-                if (rs.next()) {
-                    existingCreatedAt = rs.getString("created_at");
-                }
-            }
-
-            stmt.execute("""
-                INSERT OR REPLACE INTO player_sessions (
-                    player_id,
-                    auth_token,
-                    created_at,
-                    updated_at
-                )
-                VALUES (
-                    '%s',
-                    '%s',
-                    '%s',
+    private void upsertSession(Statement stmt, String playerId, String authToken, String now) throws Exception {
+        stmt.execute("""
+            INSERT OR REPLACE INTO player_sessions (
+                player_id,
+                auth_token,
+                created_at,
+                updated_at
+            )
+            VALUES (
+                '%s',
+                '%s',
+                COALESCE(
+                    (SELECT created_at FROM player_sessions WHERE player_id = '%s'),
                     '%s'
-                )
-            """.formatted(
-                escapeSql(playerId),
-                escapeSql(authToken),
-                escapeSql(existingCreatedAt),
-                escapeSql(updatedAt)
-            ));
-        }
+                ),
+                '%s'
+            )
+        """.formatted(
+            escapeSql(playerId),
+            escapeSql(authToken),
+            escapeSql(playerId),
+            escapeSql(now),
+            escapeSql(now)
+        ));
     }
 
-    private void cleanupPartialPlayer(Connection conn, String playerId) {
-        try (Statement stmt = conn.createStatement()) {
-            String safePlayerId = escapeSql(playerId);
-            stmt.executeUpdate("DELETE FROM player_sessions WHERE player_id = '%s'".formatted(safePlayerId));
-            stmt.executeUpdate("DELETE FROM player_mmr WHERE player_id = '%s'".formatted(safePlayerId));
-            stmt.executeUpdate("DELETE FROM players WHERE id = '%s'".formatted(safePlayerId));
-        } catch (Exception cleanupError) {
-            System.err.println("Failed to clean up partial player registration for id=" + playerId);
-            cleanupError.printStackTrace();
-        }
-    }
+    private String generateAuthToken() {
+        byte[] bytes = new byte[24];
+        RANDOM.nextBytes(bytes);
 
-    private String firstNonBlank(String... values) {
-        if (values == null) {
-            return null;
+        StringBuilder builder = new StringBuilder(bytes.length * 2);
+        for (int i = 0; i < bytes.length; i++) {
+            builder.append(String.format("%02x", bytes[i]));
         }
-        for (String value : values) {
-            if (value != null && !value.isBlank()) {
-                return value;
-            }
-        }
-        return null;
-    }
-
-    private String trimToNull(String value) {
-        if (value == null) {
-            return null;
-        }
-        String trimmed = value.trim();
-        return trimmed.isEmpty() ? null : trimmed;
+        return builder.toString();
     }
 
     private String validateUsername(String username) {
-        if (username == null || username.isBlank()) {
+        if (isBlank(username)) {
             return "Username is required";
         }
 
@@ -688,14 +653,14 @@ public class PlayerController {
     }
 
     private String validatePlayerId(String id) {
-        if (id == null || id.isBlank()) {
+        if (isBlank(id)) {
             return "Player id is required";
         }
         return null;
     }
 
     private String validateTheme(String theme) {
-        if (theme == null || theme.isBlank()) {
+        if (isBlank(theme)) {
             return "Theme is required";
         }
 
@@ -706,13 +671,26 @@ public class PlayerController {
         return null;
     }
 
+    private String validateMode(String mode) {
+        if (isBlank(mode)) {
+            return "mode is required";
+        }
+
+        String normalized = mode.trim().toLowerCase(Locale.ROOT);
+        if (!GameDefaults.ALLOWED_MODES.contains(normalized)) {
+            return "Invalid mode";
+        }
+
+        return null;
+    }
+
     private String validateGamemode(String gamemode) {
-        if (gamemode == null || gamemode.isBlank()) {
+        if (isBlank(gamemode)) {
             return "currentGamemode is required";
         }
 
-        if (!GameDefaults.ALLOWED_GAME_MODES.contains(gamemode)) {
-            return "Invalid currentGamemode";
+        if (gamemode.length() > GameDefaults.MAX_GAMEMODE_LENGTH) {
+            return "currentGamemode must be " + GameDefaults.MAX_GAMEMODE_LENGTH + " characters or less";
         }
 
         return null;
@@ -726,7 +704,7 @@ public class PlayerController {
     }
 
     private String validateMmrMode(String mode) {
-        if (mode == null || mode.isBlank()) {
+        if (isBlank(mode)) {
             return "mode is required";
         }
 
@@ -734,6 +712,16 @@ public class PlayerController {
             return "Invalid MMR mode";
         }
 
+        return null;
+    }
+
+    private String firstNonBlank(String a, String b) {
+        if (!isBlank(a)) {
+            return a.trim();
+        }
+        if (!isBlank(b)) {
+            return b.trim();
+        }
         return null;
     }
 
@@ -748,52 +736,8 @@ public class PlayerController {
         return value.replace("'", "''");
     }
 
-    private boolean isUniqueConstraintViolation(SQLException e) {
-        String message = e.getMessage();
-        if (message == null) {
-            return false;
-        }
-
-        String lower = message.toLowerCase();
-        return lower.contains("unique") || lower.contains("constraint");
-    }
-
-    private void logServerError(String context, String debugId, Exception e) {
-        Throwable root = rootCause(e);
-        System.err.println("[" + debugId + "] " + context);
-        System.err.println("[" + debugId + "] exception=" + e.getClass().getName() + ", message=" + safeMessage(e));
-        if (root != e) {
-            System.err.println("[" + debugId + "] root=" + root.getClass().getName() + ", rootMessage=" + safeMessage(root));
-        }
-        e.printStackTrace();
-    }
-
-    private void debug(String message) {
-        if (DEBUG_ERRORS) {
-            System.err.println("[debug] " + message);
-        }
-    }
-
-    private Throwable rootCause(Throwable throwable) {
-        Throwable current = throwable;
-        while (current.getCause() != null) {
-            current = current.getCause();
-        }
-        return current;
-    }
-
-    private String safeMessage(Throwable throwable) {
-        String message = throwable == null ? null : throwable.getMessage();
-        return message == null || message.isBlank() ? "<no message>" : message;
-    }
-
-    private static boolean readDebugErrorsFlag() {
-        String value = System.getenv("LETTERLINK_DEBUG_ERRORS");
-        if (value == null || value.isBlank()) {
-            return true;
-        }
-        value = value.trim().toLowerCase();
-        return value.equals("1") || value.equals("true") || value.equals("yes") || value.equals("on");
+    private boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
     }
 
     private <T> ResponseEntity<ApiResponse<T>> ok(T data) {
@@ -804,41 +748,37 @@ public class PlayerController {
         return ResponseEntity.badRequest().body(ApiResponse.failure(error));
     }
 
-    private <T> ResponseEntity<ApiResponse<T>> notFound(String error) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ApiResponse.failure(error));
-    }
-
     private <T> ResponseEntity<ApiResponse<T>> unauthorized(String error) {
         return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(ApiResponse.failure(error));
     }
 
-    private <T> ResponseEntity<ApiResponse<T>> forbidden(String error) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ApiResponse.failure(error));
-    }
-
-    private <T> ResponseEntity<ApiResponse<T>> conflict(String error) {
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(ApiResponse.failure(error));
+    private <T> ResponseEntity<ApiResponse<T>> notFound(String error) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ApiResponse.failure(error));
     }
 
     private <T> ResponseEntity<ApiResponse<T>> serverError(String context, Exception e) {
-        String debugId = "ERR-" + ERROR_COUNTER.incrementAndGet();
-        logServerError(context, debugId, e);
+        int errorId = ERROR_COUNTER.incrementAndGet();
 
-        String error = context + " [" + debugId + "]";
-        if (DEBUG_ERRORS) {
-            Throwable root = rootCause(e);
-            error += " | exception=" + e.getClass().getSimpleName();
-            error += " | message=" + safeMessage(e);
-            if (root != e) {
-                error += " | root=" + root.getClass().getSimpleName();
-                error += " | rootMessage=" + safeMessage(root);
-            }
+        Throwable root = e;
+        while (root.getCause() != null) {
+            root = root.getCause();
         }
 
+        String error = context
+            + " [ERR-" + errorId + "]"
+            + " | exception=" + e.getClass().getSimpleName()
+            + " | message=" + safeMessage(e);
+
+        if (root != e) {
+            error += " | root=" + root.getClass().getSimpleName()
+                + " | rootMessage=" + safeMessage(root);
+        }
+
+        e.printStackTrace();
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ApiResponse.failure(error));
     }
 
-    private <T> ResponseEntity<ApiResponse<T>> serverError(String error) {
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ApiResponse.failure(error));
+    private String safeMessage(Throwable t) {
+        return t.getMessage() == null ? "<no message>" : t.getMessage();
     }
 }
